k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subastas-deployment
  labels:
    app: subastas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: subastas
  template:
    metadata:
      labels:
        app: subastas
    spec:
      containers:
      - name: subastas
        image: subastas
        imagePullPolicy: "Never"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: subastas-service
spec:
  type: LoadBalancer
  selector:
    app: subastas
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-deployment
  labels:
    app: monitor
spec:
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: monitor
        image: monitor
        imagePullPolicy: "Never"
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: monitor-service
spec:
  selector:
    app: monitor
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
  labels:
    app: consumer
spec:
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: consumer
        imagePullPolicy: "Never"
