k8s/monitor_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-deployment
  labels:
    app: monitor
spec:
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: monitor
        image: monitor
        imagePullPolicy: "Never"
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: monitor-service
spec:
  selector:
    app: monitor
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
