k8s/subastas_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subastas-deployment
  labels:
    app: subastas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: subastas
  template:
    metadata:
      labels:
        app: subastas
    spec:
      containers:
      - name: subastas
        image: subastas
        imagePullPolicy: "Never"
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: subastas-service
spec:
  type: LoadBalancer
  selector:
    app: subastas
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subastas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: subastas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subastas-service
                port:
                  number: 3000
